[gd_scene load_steps=10 format=3 uid="uid://cwb0nnj7np102"]

[ext_resource type="Texture2D" uid="uid://b7a4s04x21evb" path="res://assets/sprites/zones/backgrounds/spirit_valley_background.jpg" id="1_3ls1s"]
[ext_resource type="Script" uid="uid://c2piaspfbnqfd" path="res://scenes/adventure/adventure_view/adventure_view.gd" id="1_176xw"]
[ext_resource type="PackedScene" uid="uid://bvgyusvjgbnbx" path="res://scenes/adventure/adventure_tilemap/adventure_tilemap.tscn" id="2_176xw"]
[ext_resource type="PackedScene" uid="uid://blofb5opg1kdu" path="res://scenes/combat/adventure_combat/adventure_combat.tscn" id="5_a8cog"]
[ext_resource type="PackedScene" uid="uid://dsyj8icyn4ri1" path="res://scenes/ui/combat/combatant_info_panel/combatant_info_panel.tscn" id="6_a8cog"]
[ext_resource type="Texture2D" uid="uid://bs1jsrhe5wmt8" path="res://assets/asperite/character_profiles/base_player.png" id="7_4nakn"]
[ext_resource type="StyleBox" uid="uid://b0umwsa2clxit" path="res://assets/styleboxes/border_1_panel_texture.tres" id="7_wf87j"]
[ext_resource type="Script" uid="uid://btelbuw52bmqs" path="res://scenes/adventure/adventure_view/timer_panel.gd" id="8_wf87j"]

[sub_resource type="GDScript" id="GDScript_wwigy"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pressed.connect(func() : ActionManager.stop_action())
"

[node name="AdventureView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_176xw")

[node name="TilemapView" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TilemapSubviewportContainer" type="SubViewportContainer" parent="TilemapView"]
clip_contents = true
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="AdventureTilemapBackground" type="Sprite2D" parent="TilemapView/TilemapSubviewportContainer"]
z_index = -1
position = Vector2(963.49994, 555.49994)
scale = Vector2(0.7769531, 0.7951389)
texture = ExtResource("1_3ls1s")

[node name="SubViewport" type="SubViewport" parent="TilemapView/TilemapSubviewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="AdventureTilemap" parent="TilemapView/TilemapSubviewportContainer/SubViewport" instance=ExtResource("2_176xw")]
unique_name_in_owner = true

[node name="CombatView" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CombatSubviewportContainer" type="SubViewportContainer" parent="CombatView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1880.0
offset_bottom = 1040.0
grow_horizontal = 2
grow_vertical = 2

[node name="CombatBackground" type="Sprite2D" parent="CombatView/CombatSubviewportContainer"]
z_index = -1
position = Vector2(963.49994, 555.49994)
scale = Vector2(0.7769531, 0.7951389)
texture = ExtResource("1_3ls1s")

[node name="SubViewport" type="SubViewport" parent="CombatView/CombatSubviewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 0

[node name="AdventureCombat" parent="CombatView/CombatSubviewportContainer/SubViewport" instance=ExtResource("5_a8cog")]
unique_name_in_owner = true

[node name="PlayerInfoPanel" parent="." instance=ExtResource("6_a8cog")]
unique_name_in_owner = true
custom_minimum_size = Vector2(650, 425)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
offset_left = 50.0
offset_top = -380.0
offset_right = 700.0
offset_bottom = 45.0
grow_horizontal = 1
grow_vertical = 0
rotation = -0.0036693101
profile_texture = ExtResource("7_4nakn")

[node name="TimerPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 265.0
offset_top = 32.0
offset_right = 485.0
offset_bottom = 95.0
theme_override_styles/panel = ExtResource("7_wf87j")
script = ExtResource("8_wf87j")

[node name="TimerLabel" type="RichTextLabel" parent="TimerPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 28
theme_override_font_sizes/bold_font_size = 28
theme_override_font_sizes/bold_italics_font_size = 28
theme_override_font_sizes/italics_font_size = 28
theme_override_font_sizes/mono_font_size = 28
bbcode_enabled = true
text = "Time Left: 2m 60s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="TimerPanel"]
unique_name_in_owner = true

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = 1776.0
offset_top = 986.0
offset_right = 1840.0
offset_bottom = 1050.0
script = SubResource("GDScript_wwigy")

[node name="Button2" type="Button" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = 1696.0
offset_top = 986.0
offset_right = 1760.0
offset_bottom = 1050.0
